--- a/public/lang/css/adminPanel/adminpanelTemplate.css
+++ b/public/lang/css/adminPanel/adminpanelTemplate.css
@@ -1,24 +1,41 @@
 @charset "UTF-8";
 
+*{
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
 .sidenav {
-    width :17%;
+    border:1px solid red;
+    width :15%;
     position: fixed;
     top:0px;
     left:0px;
+    padding:10px 0px;
     height: 100%;
     z-index: 1000;
     overflow-y: auto;
-    background-color: #181b24!important;
+    background-color: #172546!important;
     color: white;
     box-shadow: rgba(5, 5, 5, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset!important;
 }
+.admin-menu {
+    padding:10px 10px;
+}
+.admin-menu ul li a:hover{
+    text-decoration: none;
+    color:#ddd;
+}
+.hi-admin{
+    margin-bottom:20px;
+}
 
 .page {
-    width:83%;
-    height:90vh;
-    margin-left: 17%;
-    overflow-y: scroll;
-    margin-top: 20px;
+    width:85%;
+    height:100vh;
+    margin-left: 15%;
+    border:1px solid green;
+    background-color: rgba(82, 82, 82, 0.618);
 }
 
 
